--- a/midterm/practice/employee_management/employee/templates/employee.html
+++ b/midterm/practice/employee_management/employee/templates/employee.html
@@ -10,9 +10,7 @@
     <h1>Total {{ employee_count }} People</h1>
 </div>
 {% endblock %}
-<!-- 
-                ** Hit if และ for ให้ถูกต้อง
-            -->
+<!-- ** Hit if และ for ให้ถูกต้อง-->
 {% block content %}
 
 <table>
