--- a/final/week_9/excercise/employee/templates/employee_form.html
+++ b/final/week_9/excercise/employee/templates/employee_form.html
@@ -20,8 +20,10 @@
 </div>  
 {% endcomment %}
 
-
-
+{% comment %} แบบ 2 {% endcomment %}
+<form method="post">
+  {% csrf_token %}
+{% comment %} ระดับทั้ง form {% endcomment %}
 {{ form.non_field_errors }}
 <div class="emp-form-box">
     {{ form.first_name.errors }}
@@ -66,6 +68,6 @@
 </div>
 
 <button type="submit" >Save</button> 
-
+</form>
 
 {% endblock %}
