--- a/final/week_12/excercise/authen/templates/login.html
+++ b/final/week_12/excercise/authen/templates/login.html
@@ -5,6 +5,7 @@
 {% block content %}
 <div class="row justify-content-center">
     <div class="col-md-6">
+        {{ form.non_field_errors }}
         <h2 class="text-center">Login</h2>
         <form method="POST" action="{% url 'login' %}">
             {% csrf_token %}
